--- a/Calculator.html
+++ b/Calculator.html
@@ -1,26 +1,66 @@
 ﻿<!DOCTYPE html>
 <style>
-    table{
-        width:70%;
-        border-collapse:collapse;
+    table {
+        width: 70%;
+        border-collapse: collapse;
     }
+
     tr {
-        height:100px;
+        height: 100px;
     }
-    td{
+
+    td {
         border: 1px solid black;
-        background-color:antiquewhite;
-        text-align:center;
-        font-weight:bold;
+        background-color: antiquewhite;
+        text-align: center;
+        font-weight: bold;
     }
 </style>
+
+<script>
+    function SetToken(str) {
+        var operators = "+-*/()";
+        var token = [];
+        var number = "";
+        if (str.charAt(0) != "-" && str.charAt(0) != "(" && operators.includes(str.charAt(0))) {
+            return -1;
+        }
+        if (str.charAt(str.length - 1) != ")" && operators.includes(str.charAt(str.length - 1))) {
+            return -1;
+        }
+        token = InsertTokens(operators, number, str);
+    }
+
+    function InsertTokens(operators, number, str) {
+        var token = [];
+        for (var i = 0; i < str.length; i++) {
+            if (operators.includes(str.charAt(i))) {
+                if (number != "") {
+                    token.push(number);
+                    number = "";
+                }
+                token.push(str.charAt(i));
+            }
+            else {
+                number += str.charAt(i);
+            }
+        }
+        if (number != "") {
+            token.push(number);
+        }
+        return token;
+    }
+
+    SetToken("5+56-44/6*895.6*(6+5)");
+</script>
+
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8" />
     <title>Calculator</title>
 </head>
 <body>
-    <table >
+    <table>
         <tr>
             <td id="clear">C</td>
             <td id="startBrack">(</td>
@@ -50,6 +90,6 @@
             <td id="dot">.</td>
             <td id="equals">=</td>
         </tr>
-    </table>    
+    </table>
 </body>
 </html>
